# crucible

./: .crucible.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  README.md  SECURITY.md  pyproject.toml  roadmap.md
crucible/: __init__.py  cli.py  models.py
crucible/attacks/: advanced_orchestration.py  base.py  enterprise_graph.py  goal_hijacking.py  infrastructure_escalation.py  jailbreaks.py  mcp_attacks.py  memory_poisoning.py  prompt_injection.py
crucible/core/: behavioral_engine.py  cache.py  multi_turn_engine.py  mutation_engine.py  profiler.py  reporter.py  response_extractor.py  runner.py  scorer.py
crucible/modules/: base.py  security.py
crucible/reporters/: base.py  html_reporter.py  json_reporter.py  slack.py  terminal.py
docs/: comparison.md  getting_started.md  owasp_mapping.md
examples/: test_langchain_agent.py  test_openai_agent.py  test_openai_assistant.py  test_public_agent.py
examples/github-actions/: crucible-scan.yml
extensions/vscode/: README.md  package-lock.json  package.json
extensions/vscode/src/: extension.ts
scripts/: install.sh  quickstart.sh
tests/: conftest.py  test_advanced_orchestration.py  test_attacks.py  test_cache.py  test_cli.py  test_enterprise_connectivity.py  test_enterprise_graph.py  test_html_reporter.py  test_infrastructure_escalation.py  test_memory_poisoning.py  test_models.py  test_mutation_engine.py  test_reporter.py  test_response_extractor.py  test_runner.py  test_scorer.py  test_slack_reporter.py  test_v3_features.py
