[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crucible-security"
version = "0.3.0"
description = "pytest for AI agents -- test, score, and harden AI agents before production"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Crucible Contributors"},
]
keywords = [
    "ai",
    "agents",
    "security",
    "testing",
    "llm",
    "owasp",
    "red-team",
    "langchain",
    "crewai",
    "prompt-injection",
    "ai-safety",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "anyio>=4.0.0",
    "jmespath>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "mypy>=1.10,<2",
    "black>=24.0,<25",
    "ruff>=0.4,<1",
    "respx>=0.21,<1",
]

[project.scripts]
crucible = "crucible.cli:app"

[project.urls]
Homepage = "https://github.com/crucible-security/crucible"
Documentation = "https://crucible-security.github.io/crucible"
Repository = "https://github.com/crucible-security/crucible"
Issues = "https://github.com/crucible-security/crucible/issues"
Changelog = "https://github.com/crucible-security/crucible/blob/main/CHANGELOG.md"

# ── Tool Configuration ──────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["crucible"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]
ignore = ["E501", "RUF001", "B008", "RUF012", "SIM110"]  # line length handled by black, RUF001 intentional for bypass tests, B008 common in typer

[tool.ruff.lint.isort]
known-first-party = ["crucible"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring network",
]

[tool.coverage.run]
source = ["crucible"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]
